// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should not trigger the click event when disabled 1`] = `
<Button
  className="tss-18hbw04-Button-root"
  classes={
    {
      "root": "tss-18hbw04-Button-root",
    }
  }
  disabled={true}
  onClick={
    [MockFunction] {
      "calls": [
        [],
      ],
      "results": [
        {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  testId="Button"
>
  My content
</Button>
`;

exports[`<Button /> should render the button 1`] = `
<Button
  className="tss-18hbw04-Button-root"
  classes={
    {
      "root": "tss-18hbw04-Button-root",
    }
  }
  disabled={false}
  onClick={null}
  testId="Button"
>
  My content
</Button>
`;

exports[`<Button /> should render the button in disabled state 1`] = `
<Button
  className="tss-18hbw04-Button-root"
  classes={
    {
      "root": "tss-18hbw04-Button-root",
    }
  }
  disabled={true}
  onClick={null}
  testId="Button"
>
  My content
</Button>
`;

exports[`<Button /> should trigger the click event 1`] = `
<Button
  className="tss-18hbw04-Button-root"
  classes={
    {
      "root": "tss-18hbw04-Button-root",
    }
  }
  disabled={false}
  onClick={
    [MockFunction] {
      "calls": [
        [],
      ],
      "results": [
        {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  testId="Button"
>
  My content
</Button>
`;
